# challenge-radix

./: .gitignore  README.md  generate_and_insert_data_sensor.sh  install_dependencies.sh  run_project.sh  stress_test.sh
backend/: .gitignore  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: cb39aec58e6b_add_data_sensor_table.py
backend/app/: main.py  schemas.py
backend/app/db/: connection.py  generate_sensor_data.py  insert_sensor_data.py  models.py
backend/app/routes/: get_data_sensor.py  insert_csv.py  insert_json.py  not_allowed.py
backend/app/utils/: json_utils.py
backend/migrations/versions/: 775eb6a63b04_add_data_sensor_table.py  d2e99a019fbb_add_data_sensor_table.py
backend/tests/: api-stress-test.py  config.py
database/: .gitignore  create_db_table.sh  generate_sensor_data.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx
frontend/src/api/: api.ts  fetch.ts
frontend/src/components/: Graph.tsx  Home.tsx  Loading.tsx  Menu.tsx  NotFound.tsx
